added extension intro.